<resources>
    <string name="app_name">Заметки</string>

    <!-- Заметки -->
    <string name="note_title">Заметка</string>
    <string name="edit_title_hint">Название заметки</string>
    <string name="edit_description_hint">Описание заметки</string>
    <string name="edit_date_hint">Дата создания</string>
    <string name="button_save">Сохранить</string>
    <string name="update_title">Дата обновления:</string>
    <string name="edit_time_hint">Время создания</string>
    <string name="title_null">Пустое название</string>
    <string name="description_null">Пустое описание</string>
    <string name="create_null">Пустая дата или время</string>
    <string name="text_copied">Текст скопирован</string>

    <!-- меню -->
    <string name="menu_add">Добавить заметку</string>
    <string name="menu_notes">Заметки</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_about">О приложении</string>
    <string name="menu_copy">Скопировать текст</string>
    <string name="menu_delete">Удалить заметку</string>

    <!-- о приложении -->
    <string name="about_title">Заметки v.%1$s</string>
    <string name="about_description">Приложение разработано в рамках учебного курса
    <u>Android 1. Знакомство с платформой</u> на факультете <u>Android-разработки</u>
    в Geek University.</string>
    <string name="about_author">Автор: <b>Кирюшин Евгений</b></string>
    <string name="about_date">Дата создания: <b>19.03.2021</b></string>

    <!-- настройки -->
    <string name="setting_title">Настройки приложения</string>
    <string name="setting_description">. . . .</string>
    <string name="date_dialog_title">Выбор даты</string>
    <string name="time_dialog_title">Выбор времени</string>

    <!-- авторизация -->
    <integer name="com_vk_sdk_AppId">7808187</integer>
    <string name="auth_title">Для работы с приложением необходимо авторизоваться</string>
    <string name="button_google_sign">Google</string>
    <string name="button_vk_sign">VK</string>
    <string name="auth_success">Авторизация успешна: %1$s</string>
    <string name="about_auth">Авторизация</string>
    <string name="button_sign_out">Выйти</string>

    <!-- диалоговые окна -->
    <string name="dialog_delete_title">Удаление</string>
    <string name="dialog_delete_message">Вы уверены, что хотите удалить заметку «%1$s»?</string>
    <string name="dialog_button_delete">Удалить</string>
    <string name="dialog_button_cancel">Отмена</string>
</resources>
