<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.AboutFragment"
    android:padding="@dimen/item_padding">

    <TextView
        android:id="@+id/about_title_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:textSize="@dimen/about_title_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/about_description_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_description"
        android:textSize="@dimen/about_description_size"
        android:layout_marginTop="@dimen/item_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_title_id"/>

    <TextView
        android:id="@+id/about_author_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_author"
        android:textSize="@dimen/about_description_size"
        android:layout_marginTop="@dimen/item_padding_author"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_description_id"/>

    <TextView
        android:id="@+id/about_date_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_date"
        android:textSize="@dimen/about_description_size"
        android:layout_marginTop="@dimen/item_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_author_id"/>

</androidx.constraintlayout.widget.ConstraintLayout>